# Sensor-Fusion-IMU-CAM

./: CMakeLists.txt  README.md
data/: task_imu.csv
include/: Cluster.hpp  IMUDataParser.hpp  KalmanFilter.hpp  SensorDataParser.hpp  Utils.cpp
src/: Cluster.cpp  IMUDataParser.cpp  KalmanFilter.cpp  SensorDataParser.cpp  Utils.cpp  main.cpp
